// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wallet should deploy 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Deploy",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
          "to": "kQD0U23m_zYaGE478JSYWArftVj_E1kZR8fWd_k8Teq8C8FH",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 3835n,
      },
    ],
  },
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{0000007B0000000001800B71D212D273ADB230C8D64D1A7F2E8285E880D2E2487C3E80E336C42E84DE084A04A817C800}
 x{820B8A3C23C10460E87A67DAAD3F23488EEF92966184DF661EEB0650701E2616A0609354DF656993A5BE7C5D52CBA9F4EC9DBF4DE0A006EB7AC44F5FD3B3DF05}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
          "to": "kQD0U23m_zYaGE478JSYWArftVj_E1kZR8fWd_k8Teq8C8FH",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 6914n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "type": "empty",
            },
            "bounce": true,
            "from": "kQD0U23m_zYaGE478JSYWArftVj_E1kZR8fWd_k8Teq8C8FH",
            "to": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
            "type": "internal",
            "value": 10000000000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`wallet should deploy 2`] = `
[
  {
    "$seq": 2,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "notify",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
          "to": "kQD0U23m_zYaGE478JSYWArftVj_E1kZR8fWd_k8Teq8C8FH",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 3904n,
      },
    ],
  },
]
`;

exports[`wallet should deploy 3`] = `
[
  {
    "$seq": 3,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "type": "empty",
          },
          "bounce": true,
          "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
          "to": "kQD0U23m_zYaGE478JSYWArftVj_E1kZR8fWd_k8Teq8C8FH",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 2896n,
      },
    ],
  },
]
`;
